# bsdiff

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bsdiff.c  bspatch.c  err_win.h
